# routes/auth.js
@@ -1,0 +1,8 @@
+const router = require("express").Router();
+const authController = require("../controllers/auth");
+
+router.post("/register", authController.register);
+router.post("/login", authController.login);
+router.post("/logout", authController.logout);
+
+module.exports = router;
